15-cert-manager/01-app/ingressroute-tls.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress-route-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jsdtech.app`)
      kind: Rule
      services:
        - name: nginx-svc
          port: 80
  tls:
    secretName: jsdtech-app-cert
