15-cert-manager/01-app/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress-route
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jsdtech.app`)
      kind: Rule
      services:
        - name: nginx-svc
          port: 80
